--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- need the following styling to make the root full height -->
+    <div
+      id="root"
+      style="position: absolute; top: 0; bottom: 0; left: 0; right: 0"
+    ></div>
   </body>
 </html>
