--- a/public/index.html
+++ b/public/index.html
@@ -18,5 +18,6 @@
       id="root"
       style="position: absolute; top: 0; bottom: 0; left: 0; right: 0"
     ></div>
+    <script src="https://apis.google.com/js/api.js" defer></script>
   </body>
 </html>
