--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,300&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Recipify</title>
+    <script src="https://apis.google.com/js/api.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -18,6 +19,5 @@
       id="root"
       style="position: absolute; top: 0; bottom: 0; left: 0; right: 0"
     ></div>
-    <script src="https://apis.google.com/js/api.js" defer></script>
   </body>
 </html>
