Created signup form that shows up in a modal and styled it.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,14 @@
     <!-- need the following styling to make the root full height -->
     <div
       id="root"
-      style="position: absolute; top: 0; bottom: 0; left: 0; right: 0"
+      style="
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow-y: scroll;
+      "
     ></div>
   </body>
 </html>
