Added logo to Header and made it & header background completely responsive by using responsive images.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,34 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Find food recipes easily" />
+    <meta name="author" content="Berkay Ergin" />
+    <meta
+      name="description"
+      content="Recipify is a platform to find delicious food recipes easily."
+    />
+    <!-- third-generation iPad with high-resolution Retina display: -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="144x144"
+      href="recipify_128x128.png"
+    />
+    <!-- iPhone with high-resolution Retina display: -->
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="recipify_128x128.png"
+    />
+    <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+    <link rel="apple-touch-icon-precomposed" href="recipify_64x64.png" />
+    <!-- basic favicon -->
+    <link rel="shortcut icon" href="recipify_16x16.png" />
+    <meta property="og:image" content="recipify_256x256.png" />
+    <meta
+      property="og:description"
+      content="Recipify is a platform to find delicious food recipes easily."
+    />
+    <meta property="og:title" content="Recipify" />
+    <meta property="twitter:title" content="Recipify" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;1,300&display=swap"
