Added Google site verification metadata to the index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Recipify is a platform to find delicious food recipes easily."
     />
+    <meta
+      name="google-site-verification"
+      content="Ri3rQrIFrGc7pEWuI_FzlTR1SjqK-YlIHoGYN9W2gxs"
+    />
     <!-- third-generation iPad with high-resolution Retina display: -->
     <link
       rel="apple-touch-icon-precomposed"
