--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
         right: 0;
         margin: 0;
         overflow-y: scroll;
+        overflow-x: hidden;
+        scroll-behavior: smooth;
       "
     ></div>
   </body>
